--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 
         <h3 class = "header3 header3-5">Sign up for our next meeting:</h3>
-        <fieldset id = "field">
+        <fieldset class = "fields field1" id = "field">
             <legend>Sign up:</legend>
-            <label for="firstname">First name:</label>
+            <label class = "labels label1" for="firstname">First name:</label>
             <input type="text" id="firstname" name="firstname"><br><br>
             <label for="lastname">Last name:</label>
             <input type="text" id="lastname" name="lastname"><br><br>
